# homepagehw

./: README.md  averagescore.p  averagescorecp.p  details.py  main.py  pyproject.toml  rating.p  ratingcp.p  requirements.txt
static/css/: index.css  navbar.css  standard.css  team.css  walkthrough.css
static/js/: index.js  walkthrough.js  walkthrough2.js
templates/: contactme.html  formating.html  index.html  navbar.html  reviewform.html  standard.html  teampage.html  walkthrough.html  wheresmyenergy.html
