[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["jasonjiangstuy <jasonjiangny@gmail.com>"]
description = ""
name = "homepagehw-1"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^1.1"
flask-debug = "^0.4.3"
python = "^3.7"
[tool.poetry.dev-dependencies]
